objects/Lead_Transition__c.object
<CustomObject>
    <description>Audit trail of the lead as it transitions through different statuses/states.</description>
    <fields>
        <fullName>Converted_to_Opp__c</fullName>
        <label>Converted to Opp</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IQL_Campaign__c</fullName>
        <label>IQL Campaign</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IQL_Date__c</fullName>
        <label>IQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead ID</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Transitions</relationshipLabel>
        <relationshipName>Lead_Transitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <externalId>true</externalId>
        <label>Lead</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MN_Campaign__c</fullName>
        <label>MN Campaign</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MN_Date__c</fullName>
        <label>MN Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MQL_Campaign__c</fullName>
        <label>MQL Campaign</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <label>MQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Marketing_Nurture__c</fullName>
        <label>Marketing Nurture</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Qualified__c</fullName>
        <label>Marketing Qualified</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPP_Campaign__c</fullName>
        <label>OPP Campaign</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPP_Date__c</fullName>
        <label>OPP Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OPP_Type__c</fullName>
        <label>OPP Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REJ_Campaign__c</fullName>
        <label>REJ Campaign</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REJ_Date__c</fullName>
        <label>REJ Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <label>Rejected</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAL_Campaign__c</fullName>
        <label>SAL Campaign</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAL_Date__c</fullName>
        <label>SAL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Accepted__c</fullName>
        <label>Sales Accepted</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Qualifying__c</fullName>
        <label>Sales Qualifying</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WON_Campaign__c</fullName>
        <label>WON Campaign</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WON_Date__c</fullName>
        <label>WON Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Won_Business__c</fullName>
        <label>Won Business</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lead Transition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LT-{000}</displayFormat>
        <label>Lead Transistion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Transitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>